--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 </head>
 <body>
     <h1>코스를 선택하세요</h1>
-    <img src="/add_subtract.png">
+    <img src="/course-number/add_subtract.png">
 </body>
 </html>
