--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         display: none;
         background-color: white;
         z-index: 3;
+        position: absolute;
     }
     </style>
 </head>
