--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <div OVER class="layer" id="aslayer"><h1>코스를 선택하세요</h1> <img src="/course-number/subtract.png"> <img src="/course-number/add.png" style="float: right"> </div>
+    <div OVER class="layer" id="aslayer"><h1>코스를 선택하세요</h1> <p><img src="/course-number/subtract.png"> <img src="/course-number/add.png"></p> </div>
     <h1>코스를 선택하세요</h1>
     <img src="/course-number/add_subtract.png" id="add_subtract">
     <script>
