--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         z-index: 3;
         position: absolute;
     }
+    img {
+        cursor: pointer;
+    }
     </style>
 </head>
 <body>
