--- a/index.html
+++ b/index.html
@@ -56,5 +56,7 @@
         document.getElementById('aslayer').style.display = "none";
     }
     </script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script> <!-- jQuery -->
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script> <!-- js-cookie -->
 </body>
 </html>
