--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     </style>
 </head>
 <body>
+    <div TEST id="testzzz"></div>
     <div OVER class="layer" id="aslayer"><h1>코스를 선택하세요</h1> <p><img src="/course-number/subtract.png" id='suimg'> <img src="/course-number/add.png" id="addimg"></p> </div>
     <div OVER2 class="toplayer" id="subtract"><h1>가르기</h1>
     <span><img src="/one.png" id="su1"> <img src="/two.png" id="su2"> <img src="/three.png" id="su3"> <img src="/four.png" id="su4"> <img src="/five.png" id="su5"> <img src="/six.png" id="su6"> <img src="/seven.png" id="su7"> </span>
@@ -81,7 +82,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script> <!-- jQuery -->
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script> <!-- js-cookie -->
     <script JQUERY>
-        var su1step1;
+        var su1step1 = $("#testzzz");
         $("#su1").on("click", function() {
             $("#sub1").css("display", "block");
             $("#subtract").css("display", "none");
