--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             $("#subtract").css("display", "none");
         })
         $("#su1_button").on("click", function() {
-            if($("#su1_button").text = "다음") {
+            if(document.getElementById('su1_button').textContent == "다음") {
                 $("#sub1_step2").css("display", "block");
                 $("#sub1").css("display", "none");
             }
