--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         });
         $(".sinput").attr("placeholder", "여기에 입력하세요.");
         $("#su1_step2q1sub").on("click", function() {
-            if($("#su1_step2q1ans").attr("value") == "4") {
+            if($("#su1_step2q1ans").attr("value") === "4" || $("#su1_step2q1ans").attr("value") === 4) {
                 $("#su1_step2q1ans").attr("disabled", "disabled");
                 $("#su1_step2q1ans").attr("value", "정답입니다!")
             }
@@ -108,7 +108,7 @@
             }
         });
         $("#su1_step2q2sub").on("click", function() {
-            if($("#su1_step2q2ans").attr("value") == "2") {
+            if($("#su1_step2q2ans").attr("value") === "2" || $("#su1_step2q2ans").attr("value") === 2) {
                 $("#su1_step2q2ans").attr("disabled", "disabled");
                 $("#su1_step2q2ans").attr("value", "정답입니다!");
             }
