--- a/index.html
+++ b/index.html
@@ -99,23 +99,21 @@
         });
         $(".sinput").attr("placeholder", "여기에 입력하세요.");
         $("#su1_step2q1sub").on("click", function() {
-            if($("#su1_step2q1ans").attr("value") === "4" || $("#su1_step2q1ans").attr("value") === 4) {
+            if($("#su1_step2q1ans").val() === "4" || $("#su1_step2q1ans").val() === 4) {
                 $("#su1_step2q1ans").attr("disabled", "disabled");
                 $("#su1_step2q1ans").attr("value", "정답입니다!");
             }
             else {
                 alert("틀렸어요. 다시 잘 풀어보세요.");
-                console.log($("#su1_step2q1ans").attr("value"));
             }
         });
         $("#su1_step2q2sub").on("click", function() {
-            if($("#su1_step2q2ans").attr("value") === "2" || $("#su1_step2q2ans").attr("value") === 2) {
+            if($("#su1_step2q2ans").val() === "2" || $("#su1_step2q2ans").val() === 2) {
                 $("#su1_step2q2ans").attr("disabled", "disabled");
                 $("#su1_step2q2ans").attr("value", "정답입니다!");
             }
             else {
                 alert("틀렸어요. 다시 잘 풀어보세요.");
-                console.log($("#su1_stel2q2ans").attr("value"));
             }
         });
     </script>
