--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         $("#su1_step2q1sub").on("click", function() {
             if($("#su1_step2q1ans").val() === "4" || $("#su1_step2q1ans").val() === 4) {
                 $("#su1_step2q1ans").attr("disabled", "disabled");
-                $("#su1_step2q1ans").attr("value", "정답입니다!");
+                $("#su1_step2q1ans").val("정답입니다!");
             }
             else {
                 alert("틀렸어요. 다시 잘 풀어보세요.");
@@ -110,7 +110,7 @@
         $("#su1_step2q2sub").on("click", function() {
             if($("#su1_step2q2ans").val() === "2" || $("#su1_step2q2ans").val() === 2) {
                 $("#su1_step2q2ans").attr("disabled", "disabled");
-                $("#su1_step2q2ans").attr("value", "정답입니다!");
+                $("#su1_step2q2ans").val("정답입니다!");
             }
             else {
                 alert("틀렸어요. 다시 잘 풀어보세요.");
