--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
             }
             else {
                 alert("틀렸어요. 다시 잘 풀어보세요.");
+                console.log($("#su1_step2q1ans").val());
             }
         });
         $("#su1_step2q2sub").on("click", function() {
@@ -114,6 +115,7 @@
             }
             else {
                 alert("틀렸어요. 다시 잘 풀어보세요.");
+                console.log($("#su1_step2q2ans").val());
             }
         });
         
