--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
             if($("#su1_step2q1ans").val() === "3") {
                 $("#su1_step2q1ans").attr("disabled", "disabled");
                 $("#su1_step2q1ans").val("정답입니다!");
+                if($("#su1_step2q2ans").val() === "정답입니다!") {
+                    $("#su1_step2b").css("display", "block");
+                }
             }
             else {
                 alert("틀렸어요. 다시 잘 풀어보세요.");
