--- a/index.html
+++ b/index.html
@@ -58,13 +58,12 @@
     </style>
 </head>
 <body>
-    <div TEST id="testzzz"></div>
     <div OVER class="layer" id="aslayer"><h1>코스를 선택하세요</h1> <p><img src="/course-number/subtract.png" id='suimg'> <img src="/course-number/add.png" id="addimg"></p> </div>
     <div OVER2 class="toplayer" id="subtract"><h1>가르기</h1>
     <span><img src="/one.png" id="su1"> <img src="/two.png" id="su2"> <img src="/three.png" id="su3"> <img src="/four.png" id="su4"> <img src="/five.png" id="su5"> <img src="/six.png" id="su6"> <img src="/seven.png" id="su7"> </span>
     </div>
     <div OVER3 class="twotoplayer" id="sub1"><img src="/course-number/step1.png"><h2>돌이 5개 있어요. 가르기 버튼을 눌러서 갈라보세요.</h2><span><img src="/course-number/su1_unsubtract.png" id="su1_originalimg"><button id="su1_button">가르기</button></span><br><br><br><a href="https://www.freepik.com/free-photos-vectors/building">Building vector created by macrovector - www.freepik.com</a></div>
-    <div OVER3 class="twotoplayer" id="sub1_step2"><img src="/course-number/step2.png"><br><img src="/course-number/su1_step2ex.png"><br><br><h2>빈칸을 채워보세요.</h2><p><img src="/course-number/su1_step2_q1.png" id="su1_step2q1"> <img src="/course-number/su1_step2_q2.png" id="su1_step2q2"></p><br><input id="su1_step2q1ans" class="sinput"><button id="su1_step2q1sub">확인</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button id="su1_step2b" style="display: none;">다음</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input id="su1_step2q2ans" class="sinput"><button id="su1_step2q2sub">확인</button></div>
+    <div OVER3 class="twotoplayer" id="sub1_step2"><img src="/course-number/step2.png"><br><img src="/course-number/su1_step2ex.png"><br><br><h2>빈칸을 채워보세요.</h2><p><img src="/course-number/su1_step2_q1.png" id="su1_step2q1"> <img src="/course-number/su1_step2_q2.png" id="su1_step2q2"></p><br><input id="su1_step2q1ans" class="sinput"><button id="su1_step2q1sub">확인</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input id="su1_step2q2ans" class="sinput"><button id="su1_step2q2sub">확인</button></div>
     
     <h1>코스를 선택하세요</h1>
     <img src="/course-number/add_subtract.png" id="add_subtract">
@@ -80,7 +79,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script> <!-- jQuery -->
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script> <!-- js-cookie -->
     <script JQUERY>
-        var su1step1 = $("#testzzz");
         $("#su1").on("click", function() {
             $("#sub1").css("display", "block");
             $("#subtract").css("display", "none");
