--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 $("#su1_step2q1ans").attr("disabled", "disabled");
                 $("#su1_step2q1ans").val("정답입니다!");
                 if($("#su1_step2q2ans").val() === "정답입니다!") {
-                    $("#su1_step2b").css("display", "block");
+                     //// ADD HERE!!!!
                 }
             }
             else {
@@ -112,7 +112,7 @@
                 $("#su1_step2q2ans").attr("disabled", "disabled");
                 $("#su1_step2q2ans").val("정답입니다!");
                 if($("#su1_step2q1ans").val() === "정답입니다!") {
-                    $("#su1_step2b").css("display", "block");
+                    //// ADD HERE!!!!
                 }
             }
             else {
