--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
     </div>
     <div OVER3 class="twotoplayer" id="sub1"><img src="/course-number/step1.png"><h2>돌이 5개 있어요. 가르기 버튼을 눌러서 갈라보세요.</h2><span><img src="/course-number/su1_unsubtract.png" id="su1_originalimg"><button id="su1_button">가르기</button></span><br><br><br><a href="https://www.freepik.com/free-photos-vectors/building">Building vector created by macrovector - www.freepik.com</a></div>
     <div OVER3 class="twotoplayer" id="sub1_step2"><img src="/course-number/step2.png"><br><img src="/course-number/su1_step2ex.png"><br><br><h2>빈칸을 채워보세요.</h2><p><img src="/course-number/su1_step2_q1.png" id="su1_step2q1"> <img src="/course-number/su1_step2_q2.png" id="su1_step2q2"></p><br><input id="su1_step2q1ans" class="sinput"><button id="su1_step2q1sub">확인</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input id="su1_step2q2ans" class="sinput"><button id="su1_step2q2sub">확인</button></div>
-    
+    <div OVER3 class="twotoplayer" id="sub1_step3"></div>
+
     <h1>코스를 선택하세요</h1>
     <img src="/course-number/add_subtract.png" id="add_subtract">
     <script>
