--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
                 $("#su1_step2q1ans").attr("disabled", "disabled");
                 $("#su1_step2q1ans").val("정답입니다!");
                 if($("#su1_step2q2ans").val() === "정답입니다!") {
-                     //// ADD HERE!!!!
+                     $("#sub1_step3").css("display", "block");
+                     $("#sub1_step2").css("display", "none");
                 }
             }
             else {
@@ -113,7 +114,8 @@
                 $("#su1_step2q2ans").attr("disabled", "disabled");
                 $("#su1_step2q2ans").val("정답입니다!");
                 if($("#su1_step2q1ans").val() === "정답입니다!") {
-                    //// ADD HERE!!!!
+                    $("#sub1_step3").css("display", "block");
+                    $("#sub1_step2").css("display", "none");
                 }
             }
             else {
