--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@
                 $("#su1_q1a").attr("disabled", "disabled");
                 $("#su1_q1a").val("정답입니다!");
                 if($("#su1_q1a").val() === "정답입니다!" && $("#su1_q2a").val() === "정답입니다!" && $("#su1_q3a").val() === "정답입니다!" && $("#su1_q4a").val() === "정답입니다!" && $("#su1_q5a").val() === "정답입니다!" && $("#su1_q6a").val() === "정답입니다!") {
+                    $("#sub1_score").css("display", "block");
+                    $("#sub1_step3").css("display", "block");
                     function calcscore() {
                         if(su1e <= 3) {
                             if(su1e == 0) {su1m.textContent = "100점!!! 너무 잘했어요!";}
@@ -169,6 +171,8 @@
                 $("#su1_q2a").attr("disabled", "disabled");
                 $("#su1_q2a").val("정답입니다!");
                 if($("#su1_q1a").val() === "정답입니다!" && $("#su1_q2a").val() === "정답입니다!" && $("#su1_q3a").val() === "정답입니다!" && $("#su1_q4a").val() === "정답입니다!" && $("#su1_q5a").val() === "정답입니다!" && $("#su1_q6a").val() === "정답입니다!") {
+                    $("#sub1_score").css("display", "block");
+                    $("#sub1_step3").css("display", "block");
                     function calcscore() {
                         if(su1e <= 3) {
                             if(su1e == 0) {su1m.textContent = "100점!!! 너무 잘했어요!";}
@@ -199,6 +203,8 @@
                 $("#su1_q3a").attr("disabled", "disabled");
                 $("#su1_q3a").val("정답입니다!");
                 if($("#su1_q1a").val() === "정답입니다!" && $("#su1_q2a").val() === "정답입니다!" && $("#su1_q3a").val() === "정답입니다!" && $("#su1_q4a").val() === "정답입니다!" && $("#su1_q5a").val() === "정답입니다!" && $("#su1_q6a").val() === "정답입니다!") {
+                    $("#sub1_score").css("display", "block");
+                    $("#sub1_step3").css("display", "block");
                     function calcscore() {
                         if(su1e <= 3) {
                             if(su1e == 0) {su1m.textContent = "100점!!! 너무 잘했어요!";}
@@ -229,6 +235,8 @@
                 $("#su1_q4a").attr("disabled", "disabled");
                 $("#su1_q4a").val("정답입니다!");
                 if($("#su1_q1a").val() === "정답입니다!" && $("#su1_q2a").val() === "정답입니다!" && $("#su1_q3a").val() === "정답입니다!" && $("#su1_q4a").val() === "정답입니다!" && $("#su1_q5a").val() === "정답입니다!" && $("#su1_q6a").val() === "정답입니다!") {
+                    $("#sub1_score").css("display", "block");
+                    $("#sub1_step3").css("display", "block");
                     function calcscore() {
                         if(su1e <= 3) {
                             if(su1e == 0) {su1m.textContent = "100점!!! 너무 잘했어요!";}
@@ -259,6 +267,8 @@
                 $("#su1_q5a").attr("disabled", "disabled");
                 $("#su1_q5a").val("정답입니다!");
                 if($("#su1_q1a").val() === "정답입니다!" && $("#su1_q2a").val() === "정답입니다!" && $("#su1_q3a").val() === "정답입니다!" && $("#su1_q4a").val() === "정답입니다!" && $("#su1_q5a").val() === "정답입니다!" && $("#su1_q6a").val() === "정답입니다!") {
+                    $("#sub1_score").css("display", "block");
+                    $("#sub1_step3").css("display", "block");
                     function calcscore() {
                         if(su1e <= 3) {
                             if(su1e == 0) {su1m.textContent = "100점!!! 너무 잘했어요!";}
@@ -289,6 +299,8 @@
                 $("#su1_q6a").attr("disabled", "disabled");
                 $("#su1_q6a").val("정답입니다!");
                 if($("#su1_q1a").val() === "정답입니다!" && $("#su1_q2a").val() === "정답입니다!" && $("#su1_q3a").val() === "정답입니다!" && $("#su1_q4a").val() === "정답입니다!" && $("#su1_q5a").val() === "정답입니다!" && $("#su1_q6a").val() === "정답입니다!") {
+                    $("#sub1_score").css("display", "block");
+                    $("#sub1_step3").css("display", "block");
                     function calcscore() {
                         if(su1e <= 3) {
                             if(su1e == 0) {su1m.textContent = "100점!!! 너무 잘했어요!";}
