--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 $("#su1_q1a").val("정답입니다!");
                 if($("#su1_q1a").val() === "정답입니다!" && $("#su1_q2a").val() === "정답입니다!" && $("#su1_q3a").val() === "정답입니다!" && $("#su1_q4a").val() === "정답입니다!" && $("#su1_q5a").val() === "정답입니다!" && $("#su1_q6a").val() === "정답입니다!") {
                     $("#sub1_score").css("display", "block");
-                    $("#sub1_step3").css("display", "block");
+                    $("#sub1_step3").css("display", "none");
                     function calcscore() {
                         if(su1e <= 3) {
                             if(su1e == 0) {su1m.textContent = "100점!!! 너무 잘했어요!";}
@@ -172,7 +172,7 @@
                 $("#su1_q2a").val("정답입니다!");
                 if($("#su1_q1a").val() === "정답입니다!" && $("#su1_q2a").val() === "정답입니다!" && $("#su1_q3a").val() === "정답입니다!" && $("#su1_q4a").val() === "정답입니다!" && $("#su1_q5a").val() === "정답입니다!" && $("#su1_q6a").val() === "정답입니다!") {
                     $("#sub1_score").css("display", "block");
-                    $("#sub1_step3").css("display", "block");
+                    $("#sub1_step3").css("display", "none");
                     function calcscore() {
                         if(su1e <= 3) {
                             if(su1e == 0) {su1m.textContent = "100점!!! 너무 잘했어요!";}
@@ -204,7 +204,7 @@
                 $("#su1_q3a").val("정답입니다!");
                 if($("#su1_q1a").val() === "정답입니다!" && $("#su1_q2a").val() === "정답입니다!" && $("#su1_q3a").val() === "정답입니다!" && $("#su1_q4a").val() === "정답입니다!" && $("#su1_q5a").val() === "정답입니다!" && $("#su1_q6a").val() === "정답입니다!") {
                     $("#sub1_score").css("display", "block");
-                    $("#sub1_step3").css("display", "block");
+                    $("#sub1_step3").css("display", "none");
                     function calcscore() {
                         if(su1e <= 3) {
                             if(su1e == 0) {su1m.textContent = "100점!!! 너무 잘했어요!";}
@@ -236,7 +236,7 @@
                 $("#su1_q4a").val("정답입니다!");
                 if($("#su1_q1a").val() === "정답입니다!" && $("#su1_q2a").val() === "정답입니다!" && $("#su1_q3a").val() === "정답입니다!" && $("#su1_q4a").val() === "정답입니다!" && $("#su1_q5a").val() === "정답입니다!" && $("#su1_q6a").val() === "정답입니다!") {
                     $("#sub1_score").css("display", "block");
-                    $("#sub1_step3").css("display", "block");
+                    $("#sub1_step3").css("display", "none");
                     function calcscore() {
                         if(su1e <= 3) {
                             if(su1e == 0) {su1m.textContent = "100점!!! 너무 잘했어요!";}
@@ -268,7 +268,7 @@
                 $("#su1_q5a").val("정답입니다!");
                 if($("#su1_q1a").val() === "정답입니다!" && $("#su1_q2a").val() === "정답입니다!" && $("#su1_q3a").val() === "정답입니다!" && $("#su1_q4a").val() === "정답입니다!" && $("#su1_q5a").val() === "정답입니다!" && $("#su1_q6a").val() === "정답입니다!") {
                     $("#sub1_score").css("display", "block");
-                    $("#sub1_step3").css("display", "block");
+                    $("#sub1_step3").css("display", "none");
                     function calcscore() {
                         if(su1e <= 3) {
                             if(su1e == 0) {su1m.textContent = "100점!!! 너무 잘했어요!";}
@@ -300,7 +300,7 @@
                 $("#su1_q6a").val("정답입니다!");
                 if($("#su1_q1a").val() === "정답입니다!" && $("#su1_q2a").val() === "정답입니다!" && $("#su1_q3a").val() === "정답입니다!" && $("#su1_q4a").val() === "정답입니다!" && $("#su1_q5a").val() === "정답입니다!" && $("#su1_q6a").val() === "정답입니다!") {
                     $("#sub1_score").css("display", "block");
-                    $("#sub1_step3").css("display", "block");
+                    $("#sub1_step3").css("display", "none");
                     function calcscore() {
                         if(su1e <= 3) {
                             if(su1e == 0) {su1m.textContent = "100점!!! 너무 잘했어요!";}
