--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     </style>
 </head>
 <body>
+    <audio src="/course-number/startaud.mp3" id="startaud"></audio>
     <div OVER class="layer" id="aslayer"><h1>코스를 선택하세요</h1> <p><img src="/course-number/subtract.png" id='suimg'> <img src="/course-number/add.png" id="addimg"></p> </div>
     <div OVER2 class="toplayer" id="subtract"><h1>가르기</h1>
     <span><img src="/one.png" id="su1"> <img src="/two.png" id="su2"> <img src="/three.png" id="su3"> <img src="/four.png" id="su4"> <img src="/five.png" id="su5"> <img src="/six.png" id="su6"> <img src="/seven.png" id="su7"> </span>
@@ -131,6 +132,7 @@
         });
         
     </script>
+
     <script SU1>
         var su1e = 0;
         var su1m = document.getElementById('su1_ment');
@@ -141,6 +143,7 @@
                 if($("#su1_q1a").val() === "정답입니다!" && $("#su1_q2a").val() === "정답입니다!" && $("#su1_q3a").val() === "정답입니다!" && $("#su1_q4a").val() === "정답입니다!" && $("#su1_q5a").val() === "정답입니다!" && $("#su1_q6a").val() === "정답입니다!") {
                     $("#sub1_score").css("display", "block");
                     $("#sub1_step3").css("display", "none");
+                    document.getElementById('startaud').play();
                     function calcscore() {
                         if(su1e <= 3) {
                             if(su1e == 0) {su1m.textContent = "100점!!! 너무 잘했어요!";}
@@ -157,6 +160,7 @@
                             su1m.textContent = "이런! 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해 보아요!";
                             $("#su1_score").text(100 - (7 * su1e));
                         }
+                        document.getElementById('clearstage').play();
                     }
                     setTimeout(calcscore, 4000);
                 }
@@ -173,6 +177,7 @@
                 if($("#su1_q1a").val() === "정답입니다!" && $("#su1_q2a").val() === "정답입니다!" && $("#su1_q3a").val() === "정답입니다!" && $("#su1_q4a").val() === "정답입니다!" && $("#su1_q5a").val() === "정답입니다!" && $("#su1_q6a").val() === "정답입니다!") {
                     $("#sub1_score").css("display", "block");
                     $("#sub1_step3").css("display", "none");
+                    document.getElementById('startaud').play();
                     function calcscore() {
                         if(su1e <= 3) {
                             if(su1e == 0) {su1m.textContent = "100점!!! 너무 잘했어요!";}
@@ -189,6 +194,7 @@
                             su1m.textContent = "이런! 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해 보아요!";
                             $("#su1_score").text(100 - (7 * su1e));
                         }
+                        document.getElementById('clearstage').play();
                     }
                     setTimeout(calcscore, 4000);
                 }
@@ -205,6 +211,7 @@
                 if($("#su1_q1a").val() === "정답입니다!" && $("#su1_q2a").val() === "정답입니다!" && $("#su1_q3a").val() === "정답입니다!" && $("#su1_q4a").val() === "정답입니다!" && $("#su1_q5a").val() === "정답입니다!" && $("#su1_q6a").val() === "정답입니다!") {
                     $("#sub1_score").css("display", "block");
                     $("#sub1_step3").css("display", "none");
+                    document.getElementById('startaud').play();
                     function calcscore() {
                         if(su1e <= 3) {
                             if(su1e == 0) {su1m.textContent = "100점!!! 너무 잘했어요!";}
@@ -221,6 +228,7 @@
                             su1m.textContent = "이런! 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해 보아요!";
                             $("#su1_score").text(100 - (7 * su1e));
                         }
+                        document.getElementById('clearstage').play();
                     }
                     setTimeout(calcscore, 4000);
                 }
@@ -237,6 +245,7 @@
                 if($("#su1_q1a").val() === "정답입니다!" && $("#su1_q2a").val() === "정답입니다!" && $("#su1_q3a").val() === "정답입니다!" && $("#su1_q4a").val() === "정답입니다!" && $("#su1_q5a").val() === "정답입니다!" && $("#su1_q6a").val() === "정답입니다!") {
                     $("#sub1_score").css("display", "block");
                     $("#sub1_step3").css("display", "none");
+                    document.getElementById('startaud').play();
                     function calcscore() {
                         if(su1e <= 3) {
                             if(su1e == 0) {su1m.textContent = "100점!!! 너무 잘했어요!";}
@@ -253,6 +262,7 @@
                             su1m.textContent = "이런! 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해 보아요!";
                             $("#su1_score").text(100 - (7 * su1e));
                         }
+                        document.getElementById('clearstage').play();
                     }
                     setTimeout(calcscore, 4000);
                 }
@@ -269,6 +279,7 @@
                 if($("#su1_q1a").val() === "정답입니다!" && $("#su1_q2a").val() === "정답입니다!" && $("#su1_q3a").val() === "정답입니다!" && $("#su1_q4a").val() === "정답입니다!" && $("#su1_q5a").val() === "정답입니다!" && $("#su1_q6a").val() === "정답입니다!") {
                     $("#sub1_score").css("display", "block");
                     $("#sub1_step3").css("display", "none");
+                    document.getElementById('startaud').play();
                     function calcscore() {
                         if(su1e <= 3) {
                             if(su1e == 0) {su1m.textContent = "100점!!! 너무 잘했어요!";}
@@ -285,6 +296,7 @@
                             su1m.textContent = "이런! 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해 보아요!";
                             $("#su1_score").text(100 - (7 * su1e));
                         }
+                        document.getElementById('clearstage').play();
                     }
                     setTimeout(calcscore, 4000);
                 }
@@ -301,6 +313,7 @@
                 if($("#su1_q1a").val() === "정답입니다!" && $("#su1_q2a").val() === "정답입니다!" && $("#su1_q3a").val() === "정답입니다!" && $("#su1_q4a").val() === "정답입니다!" && $("#su1_q5a").val() === "정답입니다!" && $("#su1_q6a").val() === "정답입니다!") {
                     $("#sub1_score").css("display", "block");
                     $("#sub1_step3").css("display", "none");
+                    document.getElementById('startaud').play();
                     function calcscore() {
                         if(su1e <= 3) {
                             if(su1e == 0) {su1m.textContent = "100점!!! 너무 잘했어요!";}
@@ -317,6 +330,7 @@
                             su1m.textContent = "이런! 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해 보아요!";
                             $("#su1_score").text(100 - (7 * su1e));
                         }
+                        document.getElementById('clearstage').play();
                     }
                     setTimeout(calcscore, 4000);
                 }
