--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
     .sinput:focus {
         border: 3px solid #555;
     }
+    #star {
+        position: absolute;
+        width: 85px;
+        right: 100px;
+        top: 4px;
+    }
     </style>
 </head>
 <body>
@@ -63,7 +69,7 @@
     <div OVER2 class="toplayer" id="subtract"><h1>가르기</h1>
     <span><img src="/one.png" id="su1"> <img src="/two.png" id="su2"> <img src="/three.png" id="su3"> <img src="/four.png" id="su4"> <img src="/five.png" id="su5"> <img src="/six.png" id="su6"> <img src="/seven.png" id="su7"> </span>
     </div>
-
+    <div OVER8 class="twotoplayer" id="star" style="z-index: 8;"><img src="/course-number/star.png" id="star"></div>
 
     <div OVER3 class="twotoplayer" id="sub1"><img src="/course-number/step1.png"><h2>돌이 5개 있어요. 가르기 버튼을 눌러서 갈라보세요.</h2><span><img src="/course-number/su1_unsubtract.png" id="su1_originalimg"><button id="su1_button">가르기</button></span><br><br><br><a href="https://www.freepik.com/free-photos-vectors/building">Building vector created by macrovector - www.freepik.com</a></div>
     <div OVER3 class="twotoplayer" id="sub1_step2"><img src="/course-number/step2.png"><br><img src="/course-number/su1_step2ex.png"><br><br><h2>빈칸을 채워보세요.</h2><p><img src="/course-number/su1_step2_q1.png" id="su1_step2q1"> <img src="/course-number/su1_step2_q2.png" id="su1_step2q2"></p><br><input id="su1_step2q1ans" class="sinput"><button id="su1_step2q1sub">확인</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input id="su1_step2q2ans" class="sinput"><button id="su1_step2q2sub">확인</button></div>
@@ -161,6 +167,7 @@
                             $("#su1_score").text(100 - (7 * su1e));
                         }
                         document.getElementById('clearstage').play();
+                        
                     }
                     setTimeout(calcscore, 4000);
                 }
