--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                             $("#su1_point2").css("display", "block");
                             $("#su1_point3").css("display", "block");
                             document.getElementById("pointaud").play();
-                            getstar(su1m, 6);
+                            getstar(su1e, 6);
                         }
                         else if(su1e <= 5) {
                             su1m.textContent = "잘했지만 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해요!";
@@ -207,14 +207,14 @@
                             $("#su1_point1").css("display", "block");
                             $("#su1_point2").css("display", "block");
                             document.getElementById("pointaud").play();
-                            getstar(su1m, 6);
+                            getstar(su1e, 6);
                         }
                         else {
                             su1m.textContent = "이런! 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해 보아요!";
                             $("#su1_score").text(100 - (7 * su1e));
                             $("#su1_point1").css("display", "block");
                             document.getElementById("pointaud").play();
-                            getstar(su1m, 6);
+                            getstar(su1e, 6);
                         }
                         document.getElementById('clearstage').play();
                         
@@ -246,7 +246,7 @@
                             $("#su1_point2").css("display", "block");
                             $("#su1_point3").css("display", "block");
                             document.getElementById("pointaud").play();
-                            getstar(su1m, 6);
+                            getstar(su1e, 6);
                         }
                         else if(su1e <= 5) {
                             su1m.textContent = "잘했지만 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해요!";
@@ -254,14 +254,14 @@
                             $("#su1_point1").css("display", "block");
                             $("#su1_point2").css("display", "block");
                             document.getElementById("pointaud").play();
-                            getstar(su1m, 6);
+                            getstar(su1e, 6);
                         }
                         else {
                             su1m.textContent = "이런! 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해 보아요!";
                             $("#su1_score").text(100 - (7 * su1e));
                             $("#su1_point1").css("display", "block");
                             document.getElementById("pointaud").play();
-                            getstar(su1m, 6);
+                            getstar(su1e, 6);
                         }
                         document.getElementById('clearstage').play();
                     }
@@ -292,7 +292,7 @@
                             $("#su1_point2").css("display", "block");
                             $("#su1_point3").css("display", "block");
                             document.getElementById("pointaud").play();
-                            getstar(su1m, 6);
+                            getstar(su1e, 6);
                         }
                         else if(su1e <= 5) {
                             su1m.textContent = "잘했지만 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해요!";
@@ -300,14 +300,14 @@
                             $("#su1_point1").css("display", "block");
                             $("#su1_point2").css("display", "block");
                             document.getElementById("pointaud").play();
-                            getstar(su1m, 6);
+                            getstar(su1e, 6);
                         }
                         else {
                             su1m.textContent = "이런! 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해 보아요!";
                             $("#su1_score").text(100 - (7 * su1e));
                             $("#su1_point1").css("display", "block");
                             document.getElementById("pointaud").play();
-                            getstar(su1m, 6);
+                            getstar(su1e, 6);
                         }
                         document.getElementById('clearstage').play();
                     }
@@ -338,7 +338,7 @@
                             $("#su1_point2").css("display", "block");
                             $("#su1_point3").css("display", "block");
                             document.getElementById("pointaud").play();
-                            getstar(su1m, 6);
+                            getstar(su1e, 6);
                         }
                         else if(su1e <= 5) {
                             su1m.textContent = "잘했지만 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해요!";
@@ -346,14 +346,14 @@
                             $("#su1_point1").css("display", "block");
                             $("#su1_point2").css("display", "block");
                             document.getElementById("pointaud").play();
-                            getstar(su1m, 6);
+                            getstar(su1e, 6);
                         }
                         else {
                             su1m.textContent = "이런! 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해 보아요!";
                             $("#su1_score").text(100 - (7 * su1e));
                             $("#su1_point1").css("display", "block");
                             document.getElementById("pointaud").play();
-                            getstar(su1m, 6);
+                            getstar(su1e, 6);
                         }
                         document.getElementById('clearstage').play();
                     }
@@ -384,7 +384,7 @@
                             $("#su1_point2").css("display", "block");
                             $("#su1_point3").css("display", "block");
                             document.getElementById("pointaud").play();
-                            getstar(su1m, 6);
+                            getstar(su1e, 6);
                         }
                         else if(su1e <= 5) {
                             su1m.textContent = "잘했지만 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해요!";
@@ -392,14 +392,14 @@
                             $("#su1_point1").css("display", "block");
                             $("#su1_point2").css("display", "block");
                             document.getElementById("pointaud").play();
-                            getstar(su1m, 6);
+                            getstar(su1e, 6);
                         }
                         else {
                             su1m.textContent = "이런! 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해 보아요!";
                             $("#su1_score").text(100 - (7 * su1e));
                             $("#su1_point1").css("display", "block");
                             document.getElementById("pointaud").play();
-                            getstar(su1m, 6);
+                            getstar(su1e, 6);
                         }
                         document.getElementById('clearstage').play();
                     }
@@ -430,7 +430,7 @@
                             $("#su1_point2").css("display", "block");
                             $("#su1_point3").css("display", "block");
                             document.getElementById("pointaud").play();
-                            getstar(su1m, 6);
+                            getstar(su1e, 6);
                         }
                         else if(su1e <= 5) {
                             su1m.textContent = "잘했지만 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해요!";
@@ -438,14 +438,14 @@
                             $("#su1_point1").css("display", "block");
                             $("#su1_point2").css("display", "block");
                             document.getElementById("pointaud").play();
-                            getstar(su1m, 6);
+                            getstar(su1e, 6);
                         }
                         else {
                             su1m.textContent = "이런! 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해 보아요!";
                             $("#su1_score").text(100 - (7 * su1e));
                             $("#su1_point1").css("display", "block");
                             document.getElementById("pointaud").play();
-                            getstar(su1m, 6);
+                            getstar(su1e, 6);
                         }
                         document.getElementById('clearstage').play();
                     }
