--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div OVER3 class="twotoplayer" id="sub1"><img src="/course-number/step1.png"><h2>돌이 5개 있어요. 가르기 버튼을 눌러서 갈라보세요.</h2><span><img src="/course-number/su1_unsubtract.png" id="su1_originalimg"><button id="su1_button">가르기</button></span><br><br><br><a href="https://www.freepik.com/free-photos-vectors/building">Building vector created by macrovector - www.freepik.com</a></div>
     <div OVER3 class="twotoplayer" id="sub1_step2"><img src="/course-number/step2.png"><br><img src="/course-number/su1_step2ex.png"><br><br><h2>빈칸을 채워보세요.</h2><p><img src="/course-number/su1_step2_q1.png" id="su1_step2q1"> <img src="/course-number/su1_step2_q2.png" id="su1_step2q2"></p><br><input id="su1_step2q1ans" class="sinput"><button id="su1_step2q1sub">확인</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input id="su1_step2q2ans" class="sinput"><button id="su1_step2q2sub">확인</button></div>
     <div OVER3 class="twotoplayer" id="sub1_step3"><img src="/course-number/step3.png"><h2>연습해보아요!</h2><span Q1-Q3><div id="su1_q1" style="width: 30%; float: left;"><img src="/course-number/su1_q1.png"><br><input id="su1_q1a" class="sinput"><button id="su1_q1s">확인</button></div><div id="su1_q2" style="width: 30%; float: left;" ><img src="/course-number/su1_q2.png"><br><input id="su1_q2a" class="sinput"><button id="su1_q2s">확인</button></div><div id="su1_q3" style="width: 30%; float: left;" ><img src="/course-number/su1_q3.png"><br><input id="su1_q3a" class="sinput"><button id="su1_q3s">확인</button></div></span><br><span Q4-Q6><div id="su1_q4" style="width: 30%; float: left;"><img src="/course-number/su1_q4.png"><br><input id="su1_q4a" class="sinput"><button id="su1_q4s">확인</button></div><div id="su1_q5" style="width: 30%; float: left;" ><img src="/course-number/su1_q5.png"><br><input id="su1_q5a" class="sinput"><button id="su1_q5s">확인</button></div><div id="su1_q6" style="width: 30%; float: left;" ><img src="/course-number/su1_q6.png"><br><input id="su1_q6a" class="sinput"><button id="su1_q6s">확인</button></div></span></div>
-    <div OVER3 class="twotoplayer" id="sub1_score"><h1>점수</h1><h1 style="font-size: 8em; margin: 0 0;" id="su1_score">계산중...</h1><span style="text-align: center;"><img src="/course-number/star.png" id="su1_point1" style="display: none;"><img src="/course-number/star.png" id="su1_point2" style="display: none;"><img src="/course-number/star.png" id="su1_point3" style="display: none;"></span><h2 id="su1_ment"></h2><audio id="clearstage" src="/course-number/cheer.mp3"></audio><button onclick="alert('스테이지 종료! 축하합니다!'); location.reload();">스테이지 종료</button></div>
+    <div OVER3 class="twotoplayer" id="sub1_score"><h1>점수</h1><h1 style="font-size: 8em; margin: 0 0;" id="su1_score">계산중...</h1><span><img src="/course-number/star.png" id="su1_point1" style="display: none;"><img src="/course-number/star.png" id="su1_point2" style="display: none;"><img src="/course-number/star.png" id="su1_point3" style="display: none;"></span><h2 id="su1_ment"></h2><audio id="clearstage" src="/course-number/cheer.mp3"></audio><button onclick="alert('스테이지 종료! 축하합니다!'); location.reload();">스테이지 종료</button></div>
     
     
     <h1>코스를 선택하세요</h1>
@@ -195,24 +195,24 @@
                             if(su1e == 2) {su1m.textContent = "90점!!! 잘했지만 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해요!";}
                             if(su1e == 3) {su1m.textContent = "85점!! 잘했지만 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해요!";}
                             $("#su1_score").text(100 - (5 * su1e));
-                            $("#su1_point1").css("display", "block");
-                            $("#su1_point2").css("display", "block");
-                            $("#su1_point3").css("display", "block");
+                            $("#su1_point1").css("display", "inline-block");
+                            $("#su1_point2").css("display", "inline-block");
+                            $("#su1_point3").css("display", "inline-block");
                             document.getElementById("pointaud").play();
                             getstar(su1e, 6);
                         }
                         else if(su1e <= 5) {
                             su1m.textContent = "잘했지만 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해요!";
                             $("#su1_score").text(100 - (6 * su1e));
-                            $("#su1_point1").css("display", "block");
-                            $("#su1_point2").css("display", "block");
+                            $("#su1_point1").css("display", "inline-block");
+                            $("#su1_point2").css("display", "inline-block");
                             document.getElementById("pointaud").play();
                             getstar(su1e, 6);
                         }
                         else {
                             su1m.textContent = "이런! 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해 보아요!";
                             $("#su1_score").text(100 - (7 * su1e));
-                            $("#su1_point1").css("display", "block");
+                            $("#su1_point1").css("display", "inline-block");
                             document.getElementById("pointaud").play();
                             getstar(su1e, 6);
                         }
@@ -242,24 +242,24 @@
                             if(su1e == 2) {su1m.textContent = "90점!!! 잘했지만 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해요!";}
                             if(su1e == 3) {su1m.textContent = "85점!! 잘했지만 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해요!";}
                             $("#su1_score").text(100 - (5 * su1e));
-                            $("#su1_point1").css("display", "block");
-                            $("#su1_point2").css("display", "block");
-                            $("#su1_point3").css("display", "block");
+                            $("#su1_point1").css("display", "inline-block");
+                            $("#su1_point2").css("display", "inline-block");
+                            $("#su1_point3").css("display", "inline-block");
                             document.getElementById("pointaud").play();
                             getstar(su1e, 6);
                         }
                         else if(su1e <= 5) {
                             su1m.textContent = "잘했지만 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해요!";
                             $("#su1_score").text(100 - (6 * su1e));
-                            $("#su1_point1").css("display", "block");
-                            $("#su1_point2").css("display", "block");
+                            $("#su1_point1").css("display", "inline-block");
+                            $("#su1_point2").css("display", "inline-block");
                             document.getElementById("pointaud").play();
                             getstar(su1e, 6);
                         }
                         else {
                             su1m.textContent = "이런! 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해 보아요!";
                             $("#su1_score").text(100 - (7 * su1e));
-                            $("#su1_point1").css("display", "block");
+                            $("#su1_point1").css("display", "inline-block");
                             document.getElementById("pointaud").play();
                             getstar(su1e, 6);
                         }
@@ -288,24 +288,24 @@
                             if(su1e == 2) {su1m.textContent = "90점!!! 잘했지만 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해요!";}
                             if(su1e == 3) {su1m.textContent = "85점!! 잘했지만 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해요!";}
                             $("#su1_score").text(100 - (5 * su1e));
-                            $("#su1_point1").css("display", "block");
-                            $("#su1_point2").css("display", "block");
-                            $("#su1_point3").css("display", "block");
+                            $("#su1_point1").css("display", "inline-block");
+                            $("#su1_point2").css("display", "inline-block");
+                            $("#su1_point3").css("display", "inline-block");
                             document.getElementById("pointaud").play();
                             getstar(su1e, 6);
                         }
                         else if(su1e <= 5) {
                             su1m.textContent = "잘했지만 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해요!";
                             $("#su1_score").text(100 - (6 * su1e));
-                            $("#su1_point1").css("display", "block");
-                            $("#su1_point2").css("display", "block");
+                            $("#su1_point1").css("display", "inline-block");
+                            $("#su1_point2").css("display", "inline-block");
                             document.getElementById("pointaud").play();
                             getstar(su1e, 6);
                         }
                         else {
                             su1m.textContent = "이런! 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해 보아요!";
                             $("#su1_score").text(100 - (7 * su1e));
-                            $("#su1_point1").css("display", "block");
+                            $("#su1_point1").css("display", "inline-block");
                             document.getElementById("pointaud").play();
                             getstar(su1e, 6);
                         }
@@ -334,24 +334,24 @@
                             if(su1e == 2) {su1m.textContent = "90점!!! 잘했지만 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해요!";}
                             if(su1e == 3) {su1m.textContent = "85점!! 잘했지만 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해요!";}
                             $("#su1_score").text(100 - (5 * su1e));
-                            $("#su1_point1").css("display", "block");
-                            $("#su1_point2").css("display", "block");
-                            $("#su1_point3").css("display", "block");
+                            $("#su1_point1").css("display", "inline-block");
+                            $("#su1_point2").css("display", "inline-block");
+                            $("#su1_point3").css("display", "inline-block");
                             document.getElementById("pointaud").play();
                             getstar(su1e, 6);
                         }
                         else if(su1e <= 5) {
                             su1m.textContent = "잘했지만 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해요!";
                             $("#su1_score").text(100 - (6 * su1e));
-                            $("#su1_point1").css("display", "block");
-                            $("#su1_point2").css("display", "block");
+                            $("#su1_point1").css("display", "inline-block");
+                            $("#su1_point2").css("display", "inline-block");
                             document.getElementById("pointaud").play();
                             getstar(su1e, 6);
                         }
                         else {
                             su1m.textContent = "이런! 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해 보아요!";
                             $("#su1_score").text(100 - (7 * su1e));
-                            $("#su1_point1").css("display", "block");
+                            $("#su1_point1").css("display", "inline-block");
                             document.getElementById("pointaud").play();
                             getstar(su1e, 6);
                         }
@@ -380,24 +380,24 @@
                             if(su1e == 2) {su1m.textContent = "90점!!! 잘했지만 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해요!";}
                             if(su1e == 3) {su1m.textContent = "85점!! 잘했지만 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해요!";}
                             $("#su1_score").text(100 - (5 * su1e));
-                            $("#su1_point1").css("display", "block");
-                            $("#su1_point2").css("display", "block");
-                            $("#su1_point3").css("display", "block");
+                            $("#su1_point1").css("display", "inline-block");
+                            $("#su1_point2").css("display", "inline-block");
+                            $("#su1_point3").css("display", "inline-block");
                             document.getElementById("pointaud").play();
                             getstar(su1e, 6);
                         }
                         else if(su1e <= 5) {
                             su1m.textContent = "잘했지만 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해요!";
                             $("#su1_score").text(100 - (6 * su1e));
-                            $("#su1_point1").css("display", "block");
-                            $("#su1_point2").css("display", "block");
+                            $("#su1_point1").css("display", "inline-block");
+                            $("#su1_point2").css("display", "inline-block");
                             document.getElementById("pointaud").play();
                             getstar(su1e, 6);
                         }
                         else {
                             su1m.textContent = "이런! 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해 보아요!";
                             $("#su1_score").text(100 - (7 * su1e));
-                            $("#su1_point1").css("display", "block");
+                            $("#su1_point1").css("display", "inline-block");
                             document.getElementById("pointaud").play();
                             getstar(su1e, 6);
                         }
@@ -426,24 +426,24 @@
                             if(su1e == 2) {su1m.textContent = "90점!!! 잘했지만 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해요!";}
                             if(su1e == 3) {su1m.textContent = "85점!! 잘했지만 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해요!";}
                             $("#su1_score").text(100 - (5 * su1e));
-                            $("#su1_point1").css("display", "block");
-                            $("#su1_point2").css("display", "block");
-                            $("#su1_point3").css("display", "block");
+                            $("#su1_point1").css("display", "inline-block");
+                            $("#su1_point2").css("display", "inline-block");
+                            $("#su1_point3").css("display", "inline-block");
                             document.getElementById("pointaud").play();
                             getstar(su1e, 6);
                         }
                         else if(su1e <= 5) {
                             su1m.textContent = "잘했지만 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해요!";
                             $("#su1_score").text(100 - (6 * su1e));
-                            $("#su1_point1").css("display", "block");
-                            $("#su1_point2").css("display", "block");
+                            $("#su1_point1").css("display", "inline-block");
+                            $("#su1_point2").css("display", "inline-block");
                             document.getElementById("pointaud").play();
                             getstar(su1e, 6);
                         }
                         else {
                             su1m.textContent = "이런! 다음 번에는 더 좋은 점수를 얻을 수 있도록 노력해 보아요!";
                             $("#su1_score").text(100 - (7 * su1e));
-                            $("#su1_point1").css("display", "block");
+                            $("#su1_point1").css("display", "inline-block");
                             document.getElementById("pointaud").play();
                             getstar(su1e, 6);
                         }
